# weathermaps

./: .gitignore  Chart.yaml  LICENSE  README.md  skaffold.yaml  values.dev.yaml  values.yaml
api/: Dockerfile  pyproject.toml
api/src/weathermaps/: dependencies.py  main.py
api/src/weathermaps/routers/: weather.py
templates/: NOTES.txt  _helpers.tpl  deployment.yaml  environment-secret.yaml  environment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
templates/tests/: test-connection.yaml
